# N-Body-Simulations

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  create-dependency-list.sh  developer-env.yml  move-cache.sh  pyproject.toml  pytest.ini  rename.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_and_test.yml  clang_format.yml  cppcheck.yml  dependencies.yml  flake8.yml  packaging.yml  python-app.yml  python_unit_tests.yml  system_tests.yml  ubuntu.yml  unit_tests.yml  windows.yml
conda/: bld.bat  build.sh  conda_build_config.yaml  developer.yml  meta.yaml  testing.yml
cpp/: CMakeLists.txt
cpp/simulator/: CMakeLists.txt
cpp/simulator/inc/: Body.h  BodyEvolution.h  BodyPositions.h  BodyPositionsAndVelocities.h  NBodySimulator.h  SimulatedBody.h  SimulationConstants.h  Vector2D.h  nbodysimulations
cpp/simulator/inc/inc/: Body.h  NBodySimulator.h  SimulationConstants.h  SpaceTimeBodyCoords.h  Vector2D.h
cpp/simulator/src/: Body.cpp  BodyEvolution.cpp  BodyPositions.cpp  BodyPositionsAndVelocities.cpp  NBodySimulator.cpp  SimulatedBody.cpp  SimulationConstants.cpp  SpaceTimeBodyCoords.cpp  Vector2D.cpp
docker/: Dockerfile  README.md  docker-compose.yml  start.py
docker/config/: lightdm.conf
docs/examples/: binary-stars-parameters.txt  solar-system.txt  three-body-parameters.txt  two-body-merge-parameters.txt  two-body-parameters.txt
interface/: startup.py
interface/plotting/: interactive_plot.py
interface/qt/: add_body_dialog.py  model.py  view.py
interface/qt/ui/: main_window.ui  main_window_ui.py  mainwindow_ui.py
n_body_simulations/: startup.py
n_body_simulations/exports/: NBodySimulator.cpp
n_body_simulations/plotting/: body_marker.py  interactive_plot.py  simulation_animator.py
n_body_simulations/qt/: __init__.py  body_data_table.py  custom_actions.py  model.py  presenter.py  table_item_delegates.py  view.py
n_body_simulations/test_helpers/: dummy_class_helper.py  mock_class_helper.py
n_body_simulations/xml/: interface_resources_rc.py  simulation_settings.xml  xml_reader.py
n_body_simulations/xml_r/: interface_resources.qrc  user_interface_properties.xml  xml_reader.py
python/: CMakeLists.txt  startup.py
python/exports/: NBodySimulator.cpp  Vector2D.cpp  nbodysimulations.cpp
python/plotting/: body_marker.py  interactive_plot.py  simulation_animator.py
python/qt/: add_body_dialog.py  body_data_table.py  custom_actions.py  double_spinbox_action.py  doublespinbox_action.py  error_catcher.py  error_reporter.py  main_gui.py  model.py  presenter.py  signal_blocker.py  splitter_widgets.py  table_item_delegate.py  table_item_delegates.py  view.py
python/qt/ui/: add_body_dialog.ui  add_body_dialog_ui.py  main_window.ui  main_window_ui.py
python/xml/: interface_properties.xml  interface_resources.qrc  interface_resources_rc.py  simulation_settings.xml  user_interface_properties.xml  xml_reader.py
testing/unit tests/interface/qt/: test.py
tests/: CMakeLists.txt
tests/helpers/: CMakeLists.txt  dummy_class_helper.py  mock_class_helper.py  setup_test_helper.py
tests/system_tests/: CMakeLists.txt
tests/system_tests/cpp/: CMakeLists.txt  NBodySimulatorTest.cpp
tests/system_tests/python/: directory_helper.py  test_interface_startup.py  test_simulation_animation.py  test_simulation_animator.py
tests/unit tests/interface/qt/: test.py  test_model.py
tests/unit_tests/cpp/: BodyEvolutionTest.cpp  BodyPositionsAndVelocitiesTest.cpp  BodyPositionsTest.cpp  BodyTest.cpp  CMakeLists.txt  NBodySimulatorTest.cpp  SimulationConstantsTest.cpp  Vector2DTest.cpp  main.cpp
tests/unit_tests/interface/qt/: test_model.py
tests/unit_tests/python/exports/: test_NBodySimulator_export.py  test_simulator_export.py  test_vector_2d_export.py
tests/unit_tests/python/plotting/: directory_helper.py  test_body_marker.py  test_interactive_plot.py  test_simulation_animator.py
tests/unit_tests/python/qt/: directory_helper.py  test_body_data_table.py  test_custom_actions.py  test_double_spinbox_action.py  test_error_catcher.py  test_model.py  test_presenter.py  test_splitter_widgets.py  test_table_item_delegate.py  test_table_item_delegates.py  test_view.py  unit_test_setup.py
tests/unit_tests/python/xml/: test_xml_reader.py
