[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n-body-simulations"
version = "1.1.0"
authors = [
  { name="Robert Applin", email="robertapplin.developer@gmail.com" },
]
description = "A fun QWidget used for simulating a gravitational system of N bodies in two dimensions."
keywords = ['python', 'qt', 'n-body', 'simulator', 'widget']
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/robertapplin/N-Body-Simulations"

[tool.setuptools.packages.find]
include = ["n_body_simulations*"]

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.coverage.report]
include = [
    "*/n_body_simulations/plotting/*",
    "*/n_body_simulations/qt/*"
]

omit = [
    "*/n_body_simulations/plotting/interactive_plot.py",
    "*/n_body_simulations/qt/ui/*",
    "*/n_body_simulations/qt/view.py"
]

fail_under = 85
show_missing = "true"
